samples/_failures_safe/1761693272_c44122_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e3d36b1a.c: In function ‘tokenize_input’:
./samples/SAFE/__tmp_e3d36b1a.c:156:13: error: expected declaration or statement at end of input
  156 |             count++;
      |             ^~~~~
./samples/SAFE/__tmp_e3d36b1a.c:156:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_e3d36b1a.c:156:13: error: expected declaration or statement at end of input
